# crimecity3k

./: .containerignore  .gitignore  .pre-commit-config.yaml  Containerfile  MUNICIPALITIES_IS_THE_NEW_H3.md  Makefile  README.md  TODO.md  category_mapping.toml  config.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
crimecity3k/: __init__.py  config.py  data_access.py  dev_server.py  event_types.py  h3_processing.py  municipality_data.py  municipality_processing.py  municipality_tiles.py  pmtiles.py  tile_generation.py
data/: event_types.toml
deployment/: caddy-crimecity3k.conf  crimecity3k.service
docs/: event-type-mapping-analysis.md
scripts/: create_population_fixture.py  generate_test_fixtures.py  generate_tile_fixtures.py
static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_api_events.py  test_api_location.py  test_api_schemas.py  test_config.py  test_data_access.py  test_frontend_e2e.py  test_fts.py  test_h3_processing.py  test_municipality_aggregation.py  test_municipality_data.py  test_municipality_tiles.py  test_pmtiles_generation.py  test_tile_generation.py
tmp/: EXECUTIVE_SUMMARY.md  POPULATION_NORMALIZATION_REPORT.md  README.md  events_with_population_r5.parquet  events_with_population_r5_sample.csv  events_with_population_r6.parquet  events_with_population_r6_sample.csv  population_h3_r4.parquet  population_h3_r5.parquet  population_h3_r6.parquet  spike_download_population.py  spike_explore_fixture.py  spike_join_events.py  spike_population_to_h3.py  spike_scb_explore.py  spike_test_aggregation.py  spike_verify_quality.py  spike_visualize_comparison.py
(+14 files in other folders)
